--- a/src/components/code/editor/code-editor.css
+++ b/src/components/code/editor/code-editor.css
@@ -4,22 +4,15 @@
     width: calc(100% - 10px);
 }
 
-.btn {
+.format-btn {
     position: absolute;
     z-index: 10;
     opacity: 0;
     transition: opacity 0.3s;
     top: 10px;
-}
-
-.format-btn {
     right: 10px;
 }
 
-.run-btn {
-    right: 10px;
-}
-
-.editor-container:hover .btn {
+.editor-container:hover .format-btn {
     opacity: 1;
 }
