--- a/src/components/code/preview/preview.css
+++ b/src/components/code/preview/preview.css
@@ -5,8 +5,15 @@
 }
 
 .preview-wrapper iframe {
-    height: 100%;
+    height: 99.5%;
     width: 100%;
+}
+
+.preview-error {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: red;
 }
 
 .react-draggable-transparent-selection .preview-wrapper:after {
